[gd_scene load_steps=9 format=3 uid="uid://b77ra4n6ajjgj"]

[ext_resource type="PackedScene" uid="uid://c8dryybnfyevi" path="res://tests/test_environment.tscn" id="1_bovvr"]
[ext_resource type="Script" uid="uid://r5e2o1b1h4ks" path="res://levels/level.gd" id="1_xb4v1"]
[ext_resource type="PackedScene" uid="uid://cuxp1tk3ucica" path="res://destructables/building.tscn" id="2_b2cq8"]
[ext_resource type="PackedScene" uid="uid://c5y6nutqjbaxg" path="res://characters/character.tscn" id="4_urvlt"]
[ext_resource type="PackedScene" uid="uid://co5d24b6qamac" path="res://levels/countdown_timer.tscn" id="5_safpt"]
[ext_resource type="PackedScene" uid="uid://brksoipmibqja" path="res://ui/hud.tscn" id="6_d5x7l"]
[ext_resource type="PackedScene" uid="uid://h5ooflav8yup" path="res://ui/pause_menu.tscn" id="7_rtcij"]
[ext_resource type="PackedScene" uid="uid://ycmi7iov5vux" path="res://ui/score_menu.tscn" id="8_ukwr8"]

[node name="Level" type="Node3D"]
script = ExtResource("1_xb4v1")

[node name="TestEnvironment" parent="." instance=ExtResource("1_bovvr")]

[node name="Destructables" type="Node3D" parent="."]

[node name="Building1" parent="Destructables" instance=ExtResource("2_b2cq8")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1, 0, -2)

[node name="Building2" parent="Destructables" instance=ExtResource("2_b2cq8")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -3, 0, 3)

[node name="Building3" parent="Destructables" instance=ExtResource("2_b2cq8")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 2, 0, 1)

[node name="Building4" parent="Destructables" instance=ExtResource("2_b2cq8")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 3, 0, -2)

[node name="Building5" parent="Destructables" instance=ExtResource("2_b2cq8")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -2, 0, -1)

[node name="Building6" parent="Destructables" instance=ExtResource("2_b2cq8")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -3, 0, -4)

[node name="Character" parent="." instance=ExtResource("4_urvlt")]

[node name="LevelTimer" type="Timer" parent="."]
one_shot = true

[node name="CountdownTimer" parent="." instance=ExtResource("5_safpt")]
countdown = 3.0
tick = 1.0

[node name="Node" type="CanvasLayer" parent="."]

[node name="HUD" parent="Node" instance=ExtResource("6_d5x7l")]
unique_name_in_owner = true

[node name="PauseMenu" parent="Node" instance=ExtResource("7_rtcij")]
unique_name_in_owner = true

[node name="ScoreMenu" parent="Node" instance=ExtResource("8_ukwr8")]
unique_name_in_owner = true

[connection signal="timeout" from="LevelTimer" to="." method="_on_level_timer_timeout"]
